--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -26,7 +26,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "dm"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "dameng"]'
             timeout-minutes:
                 description: "The timeout minutes for the job"
                 type: number
@@ -84,6 +84,7 @@ jobs:
                   MySQL-ports: 3306 3307 3308
                   PostgreSQL-ports: 5432 5433 5434
                   Redis-ports: 6379 6380 6381
+                  dameng-ports: 5236
 
             - name: Install IGinX with Maven
               shell: bash
