--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -92,31 +92,31 @@ runs:
               echo "SERVICE_DIR=${PROJECT_ROOT}/.github/actions/service" >> $GITHUB_ENV
 
         - if: runner.os == 'Linux' || runner.os == 'macOS'
-          name: Download and Install Oracle JDBC Driver
+          name: Download and Install dameng JDBC Driver
           shell: bash
           run: |
-            wget https://download.dameng.com/eco/adapter/resource/jdbc/jdbc-20240918.zip            
-            unzip jdbc-20240918.zip
-            mvn install:install-file 
-            -DgroupId=dm.jdbc \
-            -DartifactId=DmJdbcDriver8 \
-            -Dversion=1.0 \
-            -Dpackaging=jar \ 
-            -Dfile=jdbc-20240918/DmJdbcDriver8.jar
-            rm -rf jdbc-20240918
-            rm -rf jdbc-20240918.zip
-
-        - if: runner.os == 'Windows'
-          name: Download and Install Oracle JDBC Driver
-          shell: wsl
-          run: |
-            wsl wget https://download.dameng.com/eco/adapter/resource/jdbc/jdbc-20240918.zip            
-            wsl unzip jdbc-20240918.zip
-            mvn install:install-file 
+              wget https://download.dameng.com/eco/adapter/resource/jdbc/jdbc-20240918.zip            
+              unzip jdbc-20240918.zip
+              mvn install:install-file 
               -DgroupId=dm.jdbc \
               -DartifactId=DmJdbcDriver8 \
               -Dversion=1.0 \
               -Dpackaging=jar \ 
               -Dfile=jdbc-20240918/DmJdbcDriver8.jar
-            wsl rm -rf jdbc-20240918
-            wsl rm -rf jdbc-20240918.zip
+              rm -rf jdbc-20240918
+              rm -rf jdbc-20240918.zip
+
+        - if: runner.os == 'Windows'
+          name: Download and Install dameng JDBC Driver
+          shell: wsl
+          run: |
+              wsl wget https://download.dameng.com/eco/adapter/resource/jdbc/jdbc-20240918.zip            
+              wsl unzip jdbc-20240918.zip
+              mvn install:install-file 
+              -DgroupId=dm.jdbc \
+              -DartifactId=DmJdbcDriver8 \
+              -Dversion=1.0 \
+              -Dpackaging=jar \   
+              -Dfile=jdbc-20240918/DmJdbcDriver8.jar
+              wsl rm -rf jdbc-20240918
+              wsl rm -rf jdbc-20240918.zip
