--- a/.github/actions/setup/dameng/action.yml
+++ b/.github/actions/setup/dameng/action.yml
@@ -36,7 +36,7 @@ runs:
           run: |
               wget https://download.dameng.com/eco/adapter/resource/jdbc/jdbc-20240918.zip            
               unzip jdbc-20240918.zip
-              mvn install:install-file 
+              mvn install:install-file \
               -DgroupId=dm.jdbc \
               -DartifactId=DmJdbcDriver8 \
               -Dversion=1.0 \
@@ -49,7 +49,7 @@ runs:
           run: |
               wsl wget https://download.dameng.com/eco/adapter/resource/jdbc/jdbc-20240918.zip            
               wsl unzip jdbc-20240918.zip
-              mvn install:install-file 
+              mvn install:install-file \
                 -DgroupId=dm.jdbc \
                 -DartifactId=DmJdbcDriver8 \
                 -Dversion=1.0 \
