--- a/dataSource/relational/pom.xml
+++ b/dataSource/relational/pom.xml
@@ -38,11 +38,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
-        <dependency>
-            <groupId>dm.jdbc</groupId>
-            <artifactId>DmJdbcDriver8</artifactId>
-            <version>1.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>dm.jdbc</groupId>-->
+<!--            <artifactId>DmJdbcDriver8</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
