ci: print the torch path

--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -115,6 +115,7 @@ runs:
               which python
               python -m pip install --upgrade pip
               pip install -r requirements.txt
+              python -c "import torch; print('torch loaded from:', torch.__file__)"
 
         - if: inputs.free-thread-python-required=='true'
           name: Install free-thread python
