--- a/.github/actions/service/oracle/action.yaml
+++ b/.github/actions/service/oracle/action.yaml
@@ -11,13 +11,32 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Create Config for dameng docker compose
+      shell: bash
+      working-directory: ${{ github.workspace }}
+      run: |
+        for port in ${{ inputs.ports }}; do
+          mkdir -p $port
+          mkdir -p volumes$port
+          mkdir -p volumes$port/oracle23
+          cp -f docker/oracle/docker-compose.yml $port/docker-compose-$port.yml
+          sed -i"" -e "s/1521:1521/$port:1521/g" $port/docker-compose-$port.yml
+          sed -i"" -e "s/\/volumes/\/volumes$port/g" $port/docker-compose-$port.yml
+          sed -i"" -e "s/container_name: oracle23/container_name: ${{ inputs.version }}-$port/g" $port/docker-compose-$port.yml
+        done
+        echo "docker-compose.yml created successfully"
+
     - if: runner.os == 'Linux' || runner.os == 'macOS'
       name: Start Oracle container
       shell: bash
       run: |
         for port in ${{ inputs.ports }}; do
-           docker run -d --name ${{ inputs.version }}-$port -p $port:1521 -e ORACLE_PDB=ORCLPDB -e ORACLE_PWD=ORCLPWD container-registry.oracle.com/database/free:23.5.0.0-lite
+          sudo chown -R $(whoami) $port/
+          sudo nohup docker compose -f $port/docker-compose-$port.yml up -d
         done
+        sleep 10
+        docker ps -a
+
     - if: runner.os == 'Linux' || runner.os == 'macOS'
       name: Verify Oracle Database is running
       id: oracleContainer
@@ -36,13 +55,18 @@ runs:
             fi
           done
         done
+
     - if: runner.os == 'Windows'
       name: Start Oracle container
       shell: wsl-bash {0}
       run: |
         for port in ${{ inputs.ports }}; do
-           docker run -d --name "${{ inputs.version }}-$port" -p $port:1521 -e ORACLE_PDB=ORCLPDB -e ORACLE_PWD=ORCLPWD container-registry.oracle.com/database/free:23.5.0.0-lite                
+          sudo chown -R $(whoami) $port/
+          sudo nohup docker compose -f $port/docker-compose-$port.yml up -d
         done
+        sleep 30
+        docker ps -a
+
     - if: runner.os == 'Windows'
       name: Verify Oracle Database is running
       id: oracleContainerWin
