ci: disable other test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,23 +19,23 @@ jobs:
         uses: ./.github/workflows/case-regression.yml
         with:
             metadata-matrix: '["zookeeper"]'
-    standalone-test:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-    standalone-test-no-optimizer:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-    db-ce:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-    db-ce-no-optimizer:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            close-optimizer: "true"
+    #    standalone-test:
+    #        uses: ./.github/workflows/standalone-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #    standalone-test-no-optimizer:
+    #        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #    db-ce:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #    db-ce-no-optimizer:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            close-optimizer: "true"
     standalone-test-no-mac-relational:
         uses: ./.github/workflows/standalone-test.yml
         with:
@@ -50,39 +50,39 @@ jobs:
             os-matrix: '["ubuntu-latest", "windows-latest"]'
             db-matrix: '["Dameng", "Oracle"]'
             timeout-minutes: 100
-    standalone-test-no-mac-no-privs-relational:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["Dameng"]'
-            db-support-create-database: false
-            timeout-minutes: 120
-    standalone-test-no-optimizer-no-mac-no-privs-relational:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["Dameng"]'
-            db-support-create-database: false
-            timeout-minutes: 100
-    db-ce-Dameng:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["Dameng"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
-            timeout-minutes: 120
-    db-ce-no-optimizer-Dameng:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["Dameng"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
-            timeout-minutes: 120
-            close-optimizer: "true"
+    #    standalone-test-no-mac-no-privs-relational:
+    #        uses: ./.github/workflows/standalone-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["Dameng"]'
+    #            db-support-create-database: false
+    #            timeout-minutes: 120
+    #    standalone-test-no-optimizer-no-mac-no-privs-relational:
+    #        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["Dameng"]'
+    #            db-support-create-database: false
+    #            timeout-minutes: 100
+    #    db-ce-Dameng:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["Dameng"]'
+    #            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+    #            timeout-minutes: 120
+    #    db-ce-no-optimizer-Dameng:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["Dameng"]'
+    #            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+    #            timeout-minutes: 120
+    #            close-optimizer: "true"
     db-ce-Oracle:
         uses: ./.github/workflows/DB-CE.yml
         with:
@@ -100,37 +100,37 @@ jobs:
             functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
             timeout-minutes: 120
             close-optimizer: "true"
-    standalone-test-vectordb:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 300
-    standalone-test-no-optimizer-vectordb:
-        uses: ./.github/workflows/standalone-test-no-optimizer.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            timeout-minutes: 300
-    db-ce-vectordb:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
-            timeout-minutes: 360
-    db-ce-no-optimizer-vectordb:
-        uses: ./.github/workflows/DB-CE.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "windows-latest"]'
-            db-matrix: '["VectorDB"]'
-            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
-            timeout-minutes: 360
-            close-optimizer: "true"
+    #    standalone-test-vectordb:
+    #        uses: ./.github/workflows/standalone-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            timeout-minutes: 300
+    #    standalone-test-no-optimizer-vectordb:
+    #        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            timeout-minutes: 300
+    #    db-ce-vectordb:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+    #            timeout-minutes: 360
+    #    db-ce-no-optimizer-vectordb:
+    #        uses: ./.github/workflows/DB-CE.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #            os-matrix: '["ubuntu-latest", "windows-latest"]'
+    #            db-matrix: '["VectorDB"]'
+    #            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+    #            timeout-minutes: 360
+    #            close-optimizer: "true"
     remote-test:
         uses: ./.github/workflows/remote-test.yml
         with:
@@ -154,22 +154,22 @@ jobs:
             - unit-test
             - unit-mds
             - case-regression
-            - standalone-test
-            - standalone-test-no-optimizer
-            - db-ce
-            - db-ce-no-optimizer
-            - standalone-test-vectordb
-            - standalone-test-no-optimizer-vectordb
-            - db-ce-vectordb
-            - db-ce-no-optimizer-vectordb
+            #            - standalone-test
+            #            - standalone-test-no-optimizer
+            #            - db-ce
+            #            - db-ce-no-optimizer
+            #            - standalone-test-vectordb
+            #            - standalone-test-no-optimizer-vectordb
+            #            - db-ce-vectordb
+            #            - db-ce-no-optimizer-vectordb
             - remote-test
             - assembly-test
             - free-thread-test
             - tpc-h-test
             - standalone-test-no-mac-relational
             - standalone-test-no-optimizer-no-mac-relational
-            - db-ce-Dameng
-            - db-ce-no-optimizer-Dameng
+            #            - db-ce-Dameng
+            #            - db-ce-no-optimizer-Dameng
             - db-ce-Oracle
             - db-ce-no-optimizer-Oracle
             - cluster-test
