--- a/.github/actions/service/oracle/action.yaml
+++ b/.github/actions/service/oracle/action.yaml
@@ -19,6 +19,9 @@ runs:
           mkdir -p $port
           mkdir -p volumes$port
           mkdir -p volumes$port/oracle23
+          sudo chown -R $(whoami) $port/
+          sudo chown -R 54321:54321 volumes$port/oracle23
+          sudo chmod -R 777 volumes$port/oracle23
           cp -f docker/oracle/docker-compose.yml $port/docker-compose-$port.yml
           sed -i"" -e "s/1521:1521/$port:1521/g" $port/docker-compose-$port.yml
           sed -i"" -e "s/\/volumes/\/volumes$port/g" $port/docker-compose-$port.yml
@@ -31,7 +34,6 @@ runs:
       shell: bash
       run: |
         for port in ${{ inputs.ports }}; do
-          sudo chown -R $(whoami) $port/
           sudo nohup docker compose -f $port/docker-compose-$port.yml up -d
         done
         sleep 10
@@ -61,7 +63,6 @@ runs:
       shell: wsl-bash {0}
       run: |
         for port in ${{ inputs.ports }}; do
-          sudo chown -R $(whoami) $port/
           sudo nohup docker compose -f $port/docker-compose-$port.yml up -d
         done
         sleep 30
