ci: fix oracle's docker-compose

--- a/docker/oracle/docker-compose.yml
+++ b/docker/oracle/docker-compose.yml
@@ -32,4 +32,4 @@ services:
       ORACLE_PDB: ORCLPDB
       ORACLE_PWD: ORCLPWD
     volumes:
-      - "/volumes/oracle23:/opt/oracle/oradata"
+      - "./volumes/oracle23:/opt/oracle/oradata"
