--- a/.github/actions/service/oracle/action.yaml
+++ b/.github/actions/service/oracle/action.yaml
@@ -20,7 +20,7 @@ runs:
           sudo chmod -R 777 $port/volumes/oracle23
           cp -f docker/oracle/docker-compose.yml $port/docker-compose.yml
           sed -i"" -e "s/1521:1521/$port:1521/g" $port/docker-compose.yml
-          sed -i"" -e "s/\/volumes/.\/volumes/g" $port/docker-compose.yml
+          sed -i"" -e "s/ORCLPDB/ORCLPDB_$port/g" $port/docker-compose.yml
           sed -i"" -e "s/container_name: oracle23/container_name: ${{ inputs.version }}-$port/g" $port/docker-compose.yml
         done
         echo "docker-compose.yml created successfully"
