--- a/docker/oracle/docker-compose.yml
+++ b/docker/oracle/docker-compose.yml
@@ -23,7 +23,7 @@ version: '3.5'
 services:
   oracle:
 #    image: container-registry.oracle.com/database/free:23.5.0.0-lite
-    image: container-registry.oracle.com/database/free:latest
+    image: container-registry.oracle.com/database/free:latest-lite
     container_name: oracle23
     restart: always
     privileged: true
