--- a/docker/oracle/docker-compose.yml
+++ b/docker/oracle/docker-compose.yml
@@ -22,8 +22,7 @@ version: '3.5'
 
 services:
   oracle:
-#    image: container-registry.oracle.com/database/free:23.5.0.0-lite
-    image: container-registry.oracle.com/database/free:latest-lite
+    image: container-registry.oracle.com/database/free:23.5.0.0-lite
     container_name: oracle23
     restart: always
     privileged: true
